# projkt

./: .gitignore  Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  README.md  generator.py
src/: cli.rs  main.rs  plugins.rs
src/plugins/: gitignore.rs  license.rs  readme.rs  types.rs  utils.rs
src/plugins/readme/: mod.rs
src/plugins/readme/templates/: embarkstudios.md  othneildrew.md  readmeso.md  simple.md
